# rust-graphql-server

./: .env.example  Cargo.toml  readme.md
src/: main.rs
src/graphql/: user_schema.rs
